# pressio_wls_tutorial

./: CMakeLists.txt  README.md  do_build.sh  math_for_jacobian.wxmx  wfrun.sh
bash_helpers/: build_eigen.sh  build_openblas.sh  build_pressio.sh  build_trilinos.sh  cmd_line_options.sh  detect_cmake.sh  global_vars.sh
dockerTest/: Dockerfile  SweDockerfile
python_scripts/: make_hyper_basis.py  postProcess.py
run/: main_fom.cc  main_rom.cc  make_hyper_basis.py  postProcess.py
src/: main_fom.cc  main_rom.cc  roeflux.hpp  swe.hpp  swe_hyper.hpp
swe_app/: swe_app.hpp
